name:               irreverent-quantity-megaparsec
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017 - 2018 Irreverent Pixel Feats
synopsis:           Megaparsec parsers for data types in quantity
category:           Data
description:        Megaparsec parsers for data types in quantity
homepage:           https://github.com/irreverent-pixel-feats/quantity/issues
bug-reports:        https://github.com/irreverent-pixel-feats/quantity/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/quantity.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble
                    ,   irreverent-quantity-core
                    ,   megaparsec               == 6.2.*
                    ,   ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Quantity.Megaparsec.Data.Bytes
                        Irreverent.Quantity.Megaparsec.Data.Frequency
                        Irreverent.Quantity.Megaparsec.Data.Time

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-quantity-core
                    ,   irreverent-quantity-core-test
                    ,   megaparsec              == 6.2.*
                    ,   QuickCheck              == 2.10.*
                    ,   ultra-text
                    ,   irreverent-quantity-megaparsec
