name:               irreverent-quantity-th
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017-2018 Irreverent Pixel Feats
synopsis:           QuasiQuoters and the like for quantity
category:           Data
description:        QuasiQuoters for quantity
homepage:           https://github.com/irreverent-pixel-feats/quantity/issues
bug-reports:        https://github.com/irreverent-pixel-feats/quantity/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/quantity.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble
                    ,   irreverent-quantity-core
                    ,   irreverent-quantity-megaparsec
                    ,   megaparsec              == 6.2.*
                    ,   syb                     == 0.7.*
                    ,   template-haskell        >= 2.11 && < 2.14
                    ,   ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Quantity.QQ.Data.Bytes
                        Irreverent.Quantity.QQ.Data.Frequency
                        Irreverent.Quantity.QQ.Data.Time
